@@ -1478,10 +1478,10 @@ case $host in
             cc_64_cflags="-xO3 -m64"
             ;;
 	  *-*-mingw*)
-    	    limb_64=longlong
-    	    path_64=""	# Windows amd64 calling conventions are *different*
-    	    # Silence many pedantic warnings for w64.  FIXME.
-    	    gcc_64_cflags="$gcc_64_cflags -std=gnu99"
+	    limb_64=longlong
+	    path_64=""	# Windows amd64 calling conventions are *different*
+	    # Silence many pedantic warnings for w64.  FIXME.
+	    gcc_64_cflags="$gcc_64_cflags -std=gnu99"
             ;;
         esac
 	;;
@@ -2450,6 +2450,7 @@ gmp_mpn_functions_optional="umul udiv copyi copyd com_n
   mul_2 mul_3 mul_4							\
   addmul_2 addmul_3 addmul_4 addmul_5 addmul_6 addmul_7 addmul_8	\
   addlsh1_n sublsh1_n rsblsh1_n rsh1add_n rsh1sub_n			\
+  addlsh2_n sublsh2_n rsblsh2_n						\
   add_n_sub_n addaddmul_1msb0 lshiftc"
 
 gmp_mpn_functions="$extra_functions					   \
@@ -2500,6 +2501,12 @@ case $tmp_fn in
 		     tmp_mulfunc="aorslsh1_n sorrlsh1_n";;
   rsblsh1_n)
 		     tmp_mulfunc="aorrlsh1_n sorrlsh1_n";;
+  addlsh2_n)
+		     tmp_mulfunc="aorslsh2_n aorrlsh2_n";;
+  sublsh2_n)
+		     tmp_mulfunc="aorslsh2_n sorrlsh2_n";;
+  rsblsh2_n)
+		     tmp_mulfunc="aorrlsh2_n sorrlsh2_n";;
   addlsh_n)
 		     tmp_mulfunc="aorslsh_n aorrlsh_n";;
   sublsh_n)
@@ -2931,6 +2938,7 @@ AH_VERBATIM([HAVE_NATIVE],
 #undef HAVE_NATIVE_mpn_add_nc
 #undef HAVE_NATIVE_mpn_addlsh_n
 #undef HAVE_NATIVE_mpn_addlsh1_n
+#undef HAVE_NATIVE_mpn_addlsh2_n
 #undef HAVE_NATIVE_mpn_addmul_1c
 #undef HAVE_NATIVE_mpn_addmul_2
 #undef HAVE_NATIVE_mpn_addmul_3
@@ -2975,6 +2983,7 @@ AH_VERBATIM([HAVE_NATIVE],
 #undef HAVE_NATIVE_mpn_redc_2
 #undef HAVE_NATIVE_mpn_rsblsh_n
 #undef HAVE_NATIVE_mpn_rsblsh1_n
+#undef HAVE_NATIVE_mpn_rsblsh2_n
 #undef HAVE_NATIVE_mpn_rsh1add_n
 #undef HAVE_NATIVE_mpn_rsh1sub_n
 #undef HAVE_NATIVE_mpn_sqr_basecase
@@ -2983,6 +2992,7 @@ AH_VERBATIM([HAVE_NATIVE],
 #undef HAVE_NATIVE_mpn_sub_nc
 #undef HAVE_NATIVE_mpn_sublsh_n
 #undef HAVE_NATIVE_mpn_sublsh1_n
+#undef HAVE_NATIVE_mpn_sublsh2_n
 #undef HAVE_NATIVE_mpn_submul_1c
 #undef HAVE_NATIVE_mpn_umul_ppmm
 #undef HAVE_NATIVE_mpn_umul_ppmm_r
